objects/Modification__c.object
<CustomObject><fields>
        <fullName>Cohort_Affected__c</fullName>
        <defaultValue>"Cohort 2014/15"</defaultValue>
        <label>Cohort Affected</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Date_Approved_by_Mgt_Cttee__c</fullName>
        <label>Date Approved by Mgt Cttee</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Approved_by_QMC__c</fullName>
        <label>Date Approved by QMC</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Modification_Description__c</fullName>
        <inlineHelpText>Please include details of any student consultation undertaken or confirm that students’ consent was obtained where this was required</inlineHelpText>
        <label>Modification Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Modification_Type__c</fullName>
        <label>Modification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Modifications</relationshipLabel>
        <relationshipName>Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Modification</label><nameField>
        <displayFormat>Mod-{000000}</displayFormat>
        <label>Mod Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Modifications</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>